reservations/restaurant details

--- a/app/src/main/res/layout/activity_dashboard_screen.xml
+++ b/app/src/main/res/layout/activity_dashboard_screen.xml
@@ -57,7 +57,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/coverimage" />
+                    android:src="@drawable/pfphehe" />
             </RelativeLayout>
 
 
@@ -169,7 +169,8 @@
                             android:layout_weight="1"
                             android:background="@drawable/customborder"
                             android:backgroundTint="#2A2A2A"
-                            android:orientation="vertical">
+                            android:orientation="vertical"
+                            android:id="@+id/restaurantBox">
 
                             <ImageView
                                 android:layout_width="match_parent"
@@ -221,7 +222,8 @@
                                     android:backgroundTint="#F9A825"
                                     android:text="Reserve"
                                     android:textColor="#FFFFFF"
-                                    android:textSize="12sp" />
+                                    android:textSize="12sp"
+                                    android:id="@+id/restaurantButton"/>
                             </LinearLayout>
                         </LinearLayout>
 
@@ -233,7 +235,8 @@
                             android:layout_weight="1"
                             android:background="@drawable/customborder"
                             android:backgroundTint="#2A2A2A"
-                            android:orientation="vertical">
+                            android:orientation="vertical"
+                            android:id="@+id/restaurantBox2">
 
                             <ImageView
                                 android:layout_width="match_parent"
@@ -277,6 +280,7 @@
                                     android:textSize="12sp" />
 
                                 <Button
+                                    android:id="@+id/restaurantButton2"
                                     android:layout_width="wrap_content"
                                     android:layout_height="36dp"
                                     android:layout_gravity="center"
@@ -300,6 +304,7 @@
                         android:weightSum="2">
 
                         <LinearLayout
+                            android:id="@+id/restaurantBox3"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="8dp"
@@ -341,7 +346,16 @@
                                     android:textColor="#B3B3B3"
                                     android:textSize="12sp" />
 
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="4dp"
+                                    android:text="11:00 AM - 10:00 PM"
+                                    android:textColor="#B3B3B3"
+                                    android:textSize="12sp" />
+
                                 <Button
+                                    android:id="@+id/restaurantButton3"
                                     android:layout_width="wrap_content"
                                     android:layout_height="36dp"
                                     android:layout_gravity="center"
@@ -355,6 +369,7 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/restaurantBox4"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
@@ -395,8 +410,16 @@
                                     android:text="SM Seaside City Cebu"
                                     android:textColor="#B3B3B3"
                                     android:textSize="12sp" />
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="4dp"
+                                    android:text="11:00 AM - 10:00 PM"
+                                    android:textColor="#B3B3B3"
+                                    android:textSize="12sp" />
 
                                 <Button
+                                    android:id="@+id/restaurantButton4"
                                     android:layout_width="wrap_content"
                                     android:layout_height="36dp"
                                     android:layout_gravity="center"
