edit/profile screens

--- a/app/src/main/res/layout/activity_dashboard_screen.xml
+++ b/app/src/main/res/layout/activity_dashboard_screen.xml
@@ -511,6 +511,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/moreButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
