--- a/app/src/main/res/layout/activity_edit_profile_screen.xml
+++ b/app/src/main/res/layout/activity_edit_profile_screen.xml
@@ -223,6 +223,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/notificationButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -244,6 +245,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/historyButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -265,6 +267,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/moreButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
