--- a/app/src/main/res/layout/activity_profile_screen.xml
+++ b/app/src/main/res/layout/activity_profile_screen.xml
@@ -256,6 +256,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/notificationButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -277,6 +278,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/historyButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -298,6 +300,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/moreButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
