added pfp customization

--- a/app/src/main/res/layout/activity_edit_profile_screen.xml
+++ b/app/src/main/res/layout/activity_edit_profile_screen.xml
@@ -62,7 +62,8 @@
 
                     <FrameLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:id="@+id/profileChange">
 
                         <de.hdodenhof.circleimageview.CircleImageView
                             android:id="@+id/profileImage"
