--- a/app/src/main/res/layout/activity_history_screen.xml
+++ b/app/src/main/res/layout/activity_history_screen.xml
@@ -18,7 +18,7 @@
             android:layout_height="24dp"
             android:src="@drawable/arrow_left_solid"
             android:layout_centerVertical="true"
-            android:tint="#FFA500"/>
+            android:tint="#FF5722"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -131,13 +131,13 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/clock_rotate_left_solid"
-                android:tint="#F9A825" />
+                android:tint="#FF5722" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="History"
-                android:textColor="#F9A825"
+                android:textColor="#FF5722"
                 android:textSize="12sp" />
         </LinearLayout>
 
