--- a/app/src/main/res/layout/activity_signup_screen.xml
+++ b/app/src/main/res/layout/activity_signup_screen.xml
@@ -93,7 +93,7 @@
         android:textAllCaps="false"
         android:textSize="16sp"
         android:background="@drawable/customborder"
-        android:backgroundTint="#FFA500"
+        android:backgroundTint="#FF5722"
         android:padding="12dp" />
 
     <!-- Bottom Text -->
