--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Table"
-            android:textColor="#FFA500"
+            android:textColor="#FF5722"
             android:textSize="32sp"
             android:textStyle="" />
 
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Flow"
-            android:textColor="#FFA500"
+            android:textColor="#FF5722"
             android:textSize="32sp"
             android:textStyle="bold" />
     </LinearLayout>
